--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1"
   },
